--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
+/configs/.env
+/configs/.development.env
+/configs/.production.env
 .env
 .env.test
 
