added dockerignore file, added commands for development and production which are running docker containers, added specific file for overriding the development container for running , and it is watching file changes in src folder

--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-/configs/.env
+/configs/.development.env
 /configs/.development.env
 /configs/.production.env
 .env
