--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
+    "start:development": "NODE_ENV=development docker compose -f docker-compose.yml -f docker-compose.dev.yml up",
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/main",
+    "start:production": "NODE_ENV=production docker compose -f docker-compose.yml up --build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
